# openstack-schedules

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  Makefile  README.rst  schedule.mod  setup.cfg  tox.ini
data/: Train PTG cleaned.csv  conflicts.csv  slots.csv  tracks.csv
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
openstack_schedules/: __init__.py  extract_csv_data.py  report.py  reporter.py  solution.py  track.py  track_collection.py  utils.py
openstack_schedules/tests/: test_openstack_schedules.py
